tests/success/typechecking/SignatureGeneralisation.vix
apply : forall f a b. (f a -> b) -> f a -> b
apply f x = apply1 f x

apply1 f x = apply f x

test : forall (f : Type -> Type) a b. (f a -> b) -> f a -> b
test = apply

test1 : forall (f : Type -> Type) a b. (f a -> b) -> f a -> b
test1 = apply1
