tests/type-error/pattern-matching/NonExhaustive.vix
type List a = Nil | Cons a (Ptr (List a))

test : forall a b. List a -> b
test Nil = test Nil
